# kaggle-dagster-dbt-snowflake-poc

./: dagster_cloud.yaml  dbt_project.yml  pyproject.toml
.github/workflows/: branch_deployments.yml  deploy.yml
dagster/: pyproject.toml
dagster/project/: assets_dbt.py  assets_insights.py  defs.py  resources.py
macros/: generate_schema_name.sql
models/marts/: mart_netflix_country_year_stats.sql  mart_netflix_country_year_stats.yml
models/staging/: src_netflix.yml  stg_netflix_titles.sql
project/: assets_dbt.py  assets_ingestion.py  assets_insights.py  defs.py  resources.py
