[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle_dagster_project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "dagster",
  "dagster-cloud",
  "snowflake-connector-python",
  "pandas",
  "kaggle",
  "dagster-dbt",
]

[tool.dagster]
module_name = "project.defs"
code_location_name = "poc_kaggle"

[tool.setuptools.packages.find]
include = ["project"]
